# django-bookshelf

./: .coveragerc  .ev_example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200325_0048.py  0003_auto_20200325_0159.py  0004_auto_20200328_1521.py  0005_auto_20200328_1528.py
accounts/templates/accounts/: login.html  password_change_done.html  password_change_form.html  profile_update.html  register.html  user_detail.html
bookshelf/: admin.py  apps.py  models.py  urls.py  views.py
bookshelf/migrations/: 0001_initial.py  0002_auto_20200322_1640.py  0003_genre.py  0004_book.py
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_auto_20200322_1640.py  0003_genre.py  0004_book.py
catalog/static/catalog/css/: style.css
catalog/templates/catalog/: author_detail.html  author_list.html  book_detail.html  book_list.html  genre_detail.html  genre_list.html
catalog/templates/catalog/partials/: _author_list_item.html  _book_list_item.html
catalog/tests/: test_models.py  test_views.py
core/: urls.py  views.py
core/templates/core/: home.html
django_bookshelf/: asgi.py  settings.py  urls.py  wsgi.py
reviews/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_auto_20200401_1647.py
reviews/templates/reviews/: review_form.html  review_list.html
static/css/: style.css
templates/: base.html
(+1 files in other folders)
